[gd_scene load_steps=11 format=3 uid="uid://bobksvm34n6j3"]

[ext_resource type="Script" path="res://scripts/green_slime.gd" id="1_dfclj"]
[ext_resource type="Texture2D" uid="uid://clcv8h7f6k4ox" path="res://assets/sprites/slime_green.png" id="1_isvan"]
[ext_resource type="PackedScene" uid="uid://dbuhrvsfnim0t" path="res://scenes/killzone.tscn" id="2_poh3l"]
[ext_resource type="Script" path="res://scripts/slime_killzone.gd" id="4_vosqr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yamdb"]
atlas = ExtResource("1_isvan")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i5tc"]
atlas = ExtResource("1_isvan")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_84y4q"]
atlas = ExtResource("1_isvan")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb0yt"]
atlas = ExtResource("1_isvan")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_tsw6d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yamdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i5tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84y4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb0yt")
}],
"loop": true,
"name": &"idle_Green_Slime",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s54f0"]
size = Vector2(10, 12)

[node name="green_Slime" type="Node2D"]
script = ExtResource("1_dfclj")

[node name="animated_Sprite_2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_tsw6d")
animation = &"idle_Green_Slime"
autoplay = "idle_Green_Slime"
frame = 3
frame_progress = 0.174065

[node name="slime_killzone" parent="." instance=ExtResource("2_poh3l")]
position = Vector2(0, -12)
script = ExtResource("4_vosqr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="slime_killzone"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_s54f0")

[node name="rayCast_Right" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(11, 0)

[node name="rayCast_Left" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-10, 0)
